--- a/justbuy.html
+++ b/justbuy.html
@@ -27,11 +27,11 @@
 <body>
   <div class="container">
 
-    <div class="hamburger">
+    <!-- <div class="hamburger">
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
-    </div>
+    </div> -->
 
     <menu class="first">
 
@@ -101,8 +101,10 @@
 
   <section class="second-container">
 
+
     <div class="image-container">
-      <div>
+
+      <div class="image-container1">
         <img class="fig5" src="fig5.jpeg" alt="">
       </div>
 
@@ -117,6 +119,9 @@
       </div>
 
     </div>
+
+
+
 
     <section class="side">
 
