--- a/justbuy.html
+++ b/justbuy.html
@@ -88,11 +88,11 @@
     <nav class="second">
       <div>
         <div class="second-nav">
-          <div><a href="#">Store Home </a> </div>
-          <div> <a href="#">Products</a> </div>
-          <div> <a href="#"> Sell</a></div>
-          <div> <a href="#">Feedback</a> </div>
-          <div><a href="#">Gifts</a> </div>
+          <div class="link"><a href="#">Store Home </a> </div>
+          <div class="link"> <a href="#">Products</a> </div>
+          <div class="link"> <a href="#"> Sell</a></div>
+          <div class="link"> <a href="#">Feedback</a> </div>
+          <div class="link"><a href="#">Gifts</a> </div>
         </div>
       </div>
     </nav>
