--- a/justbuy.html
+++ b/justbuy.html
@@ -88,11 +88,11 @@
     <nav class="second">
       <div>
         <div class="second-nav">
-          <div class="link"><a href="#">Store Home </a> </div>
-          <div class="link"> <a href="#">Products</a> </div>
-          <div class="link"> <a href="#"> Sell</a></div>
-          <div class="link"> <a href="#">Feedback</a> </div>
-          <div class="link"><a href="#">Gifts</a> </div>
+          <div class="link"><a href="#pay">Store Home </a> </div>
+          <div class="link"> <a href="#pay">Products</a> </div>
+          <div class="link"> <a href="#pay"> Sell</a></div>
+          <div class="link"> <a href="#pay">Feedback</a> </div>
+          <div class="link"><a href="#pay">Gifts</a> </div>
         </div>
       </div>
     </nav>
@@ -125,7 +125,7 @@
 
     <section class="side">
 
-      <div class="header-container">
+      <div class="header-container" id="pay">
         <button href="#" class="btn">Official Store</button>
         <div>
           <h1 class="sideh1">Galivan Female Blue Long Sleeve Dress</h1>
